--- a/MVVM_Example/app/build.gradle
+++ b/MVVM_Example/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     implementation "androidx.room:room-ktx:2.4.0"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
